syntax = "proto3";

package mail;

service MailService {
    rpc sendWelcomeMail(WelcomeMailRequest) returns (WelcomeResponse) {}
    rpc SendForgotPassword(SendForgotPasswordRequest) returns (SendForgotPasswordResponse) {}
    rpc SendApproveAndRejectTimeOff(SendApproveAndRejectRequest) returns (SendApproveAndRejectResponse) {}
    rpc SendRequestTimeOff(SendTimeOffRequest) returns (SendTimeOffResponse) {}
}

// Welcome mail
message WelcomeMailRequest {
    string name = 1;
    string email = 2;
    string code = 3;
    string department = 4;
    string password = 5;
}

message WelcomeResponse {
    int32 status = 1;
    repeated string error = 2;
}

message SendForgotPasswordRequest {
    string email = 1;
    string token = 2;
}

message SendForgotPasswordResponse {
    int32 status = 1;
    repeated string error = 2;
}

message SendApproveAndRejectRequest {
    int32 id = 1;
    string email = 2;
    string type = 3;
    string name = 4;
    string description = 5;
    string date_time_off = 6;
    string date = 7;
}

message SendApproveAndRejectResponse {
    int32 status = 1;
    repeated string error = 2;
}

message SendTimeOffRequest {
    int32 time_off_id = 1;
    string name = 2;
    string email = 3;
    string start_date = 4;
    string end_date = 5;
    string reason = 6;
    string token = 7;
}

message SendTimeOffResponse {
    int32 status = 1;
    repeated string error = 2;
}
